--- a/css/media.css
+++ b/css/media.css
@@ -7,7 +7,12 @@
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px) {
-
+    .main-right {
+        float: left;
+        margin-top: 30px;
+        width: 100%;
+        text-align: center;
+    }
 }
 
 /* Small Devices, Tablets */
