--- a/css/main.css
+++ b/css/main.css
@@ -162,9 +162,10 @@ footer a, footer a:hover {
 	-ms-transition: all .3s;
 	-o-transition: all .3s;
 	transition: all .3s;
-	color: red;
+	color: #c90000;
 	font-style: italic;
-	font-size: 14px;
+	font-size: 12px;
+	font-weight: bold;
 }
 
 .main {
